[tool.poetry]
name = "beam-retrieval"
version = "0.1.0"
description = ""
authors = ["Samuel Selleck <sellecksamuel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
numpy = "^1.21.0"
Pillow = "^8.2.0"
LightPipes = "^2.0.8"
pyFFTW = "^0.12.0"
ipympl = "^0.7.0"
mpld3 = "^0.5.5"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
